// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider borderColor prop sets borderColor 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #0068ef;
  background-color: #0068ef;
  margin-left: 0px;
  margin-right: 0px;
}

<div
  className="c0"
>
  <hr
    className="c1"
    color="border"
  />
</div>
`;

exports[`Divider m prop sets margin 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #c0cad5;
  background-color: #c0cad5;
  margin: 8px;
  margin-left: 0px;
  margin-right: 0px;
}

<div
  className="c0"
>
  <hr
    className="c1"
    color="border"
  />
</div>
`;

exports[`Divider renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #c0cad5;
  background-color: #c0cad5;
  margin-left: 0px;
  margin-right: 0px;
}

<div
  className="c0"
>
  <hr
    className="c1"
    color="border"
  />
</div>
`;

exports[`Divider width prop sets width 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #c0cad5;
  background-color: #c0cad5;
  width: 50%;
  margin-left: 0px;
  margin-right: 0px;
}

<div
  className="c0"
>
  <hr
    className="c1"
    color="border"
    width={0.5}
  />
</div>
`;
